# scriptengine-tasks-hpc

./: .gitignore  CHANGES.txt  README.md  pyproject.toml  setup.py  testmod.py
.github/workflows/: build-package.yml  install-from-source.yml  publish-to-pypi.yml
docs/sphinx/: conf.py  index.rst  introduction.rst  module-tasks.rst  slurm-tasks.rst
scriptengine/tasks/hpc/: __init__.py  pbs.py  sbatch.py  slurm.py
scriptengine_hpc/: module.py  slurm.py
src/hpctasks/: module.py  slurm.py
